(build) Migrate ssr to the new root setting schema of java lang version